--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+<!--教材P134-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> <!--写存储卡-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/><!--读存储卡-->
+    <uses-permission android:name="android.permission.CAMERA"/><!--访问照相设备权限-->
+    <uses-permission android:name="android.permission.WRITE_SETTINGS"
+        tools:ignore="ProtectedPermissions" /><!--修改全局系统设置-->
+<!--    -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
+        tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/><!--允许程序录制音频-->
+<!--    -->
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-feature android:name="android.hardware.camera"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
